spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,9 @@ header p {
 #video-section h4 {
 	font-weight: 700;
 }
+.space {
+	margin-top: 40px;
+}
 #video-section i.fa {
 	font-size: 40px;
 	margin-bottom: 20px;
@@ -187,6 +190,9 @@ header p {
 }
 #photos-section h4 {
 	font-weight: 700;
+}
+.space {
+	margin-top: 40px;
 }
 #photos-section i.fa {
 	font-size: 40px;
